# AI-Sales-Call-Analyzer

./: .gitignore  README.md  pipeline.py  pyproject.toml
backend/llm/: evaluator.py  prompt.py
backend/stt/: transcribe.py
backend/transcript/: clean_transcript.py  parser.py
backend/utils/: extract_metadata.py  file_utils.py
data/evaluations/: call_001.json  call_002.json  call_003.json  call_004.json  call_005.json  call_006.json  call_007.json
data/metadata/: call_001_meta.json  call_002_meta.json  call_003_meta.json  call_004_meta.json  call_005_meta.json  call_006_meta.json  call_007_meta.json
data/transcripts/: call_001.txt  call_002.txt  call_003.txt  call_004.txt  call_005.txt  call_006.txt  call_007.txt
frontend/: app.py
frontend/components/: call_list.py  detail_panel.py  terminal_nav.py  upload_page.py
